syntax = "proto3";

option java_multiple_files = true;
option java_package = "temp.proto";
option java_outer_classname = "HelloWorldProto";

package helloworld;

service GameStateProviderService {
    rpc connectToGame(GameConnectionRequest) returns (stream GameState) {}
}

message GameConnectionRequest {
    string name = 1;
}

message GameState {
    string message = 1;
    Point point = 2;
}

message Point {
    int32 x = 1;
    int32 y = 2;
}
